ps-datacloud/main/default/objects/ssot__PatientMedicalProcedure__dlm/fields/Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Individual_Id__c</fullName>
    <label>Individual Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Individual Id</labelOverride>
        <masterLabel>Individual Id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>