ps-datacloud/main/default/objects/ssot__PatientMedicalProcedure__dlm/fields/Procedure_Name__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Name__c</fullName>
    <label>Procedure Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Procedure Name</labelOverride>
        <masterLabel>Procedure Name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>