ps-datacloud/main/default/objects/ssot__PatientMedicalProcedure__dlm/fields/rel_1773239496456_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1773239496456_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_PatientMedicalProcedure_Individ_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ssot_PatientMedicalProcedure_Individ_rel</relationshipLabel>
    <relationshipName>rel_1773239496456_end</relationshipName>
    <type>Lookup</type>
</CustomField>